# temp

./: 001sysrepocpp.cop  01_sysrepo.cpp  02newcode.cpp  03newcode.cpp  04newcode.cpp  CMakeLists.txt  Datayangnew.yang  Input.yang  README.md  SysrepoCmake  Testaap  edit-device.xml  modem-config.yang  sysrepo_setup.txt  test_client.cpp
